# dodo_assignment

./: .gitignore
transaction-service/: .env  .gitignore  API.md  Cargo.toml  DESIGN.md  DIAGRAM.md  Dockerfile  Dockerfile.runtime  Makefile  README.md  docker-compose.yml  entrypoint.sh  openapi.yaml
transaction-service/migrations/: 20250915204803_create_accounts.down.sql  20250915204803_create_accounts.sql  20250915204818_create_transactions.down.sql  20250915204818_create_transactions.sql  20250915204839_create_api_keys.down.sql  20250915204839_create_api_keys.sql  20250915204901_create_webhooks.down.sql  20250915204901_create_webhooks.sql  20250920120000_add_api_key_columns.sql
transaction-service/src/: auth.rs  db.rs  embedded_assets.rs  handlers.rs  main.rs  models.rs  rate_limit.rs
transaction-service/src/middleware/: mod.rs
transaction-service/src/routes/: mod.rs
transaction-service/tests/: integration.rs
