[package]
name = "transaction-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
hyper = "1.7.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
argon2 = "0.4"
anyhow = "1.0"
dashmap = "5"
once_cell = "1"
